# libompx

./: CMakeLists.txt  LICENSE  README.md
benchmarks/sort/: run.sh
benchmarks/sort/cuda/: cuda_perf_sort.cu
benchmarks/sort/ompx/: compile_llvm.sh  perf_sort.cpp
benchmarks/sort/rocm/: perf_sort.cpp
benchmarks/sort/sycl/: compile_intel.sh  sycl_perf_sort.cpp
benchmarks/sort/thrust/: compile_llvm.sh  cuda_perf_sort.cu
benchmarks/sort_cmp/ompx/: compile_llvm.sh  perf_sort_cmp.cpp
benchmarks/sort_cmp/thrust/: compile_llvm.sh  thrust_perf_sort_cmp.cpp
cmake/: config.cmake.in  config_oneapi.cmake.in  config_rocm.cmake.in
codgen/: gen_thrust_interface.py
include/libompx/: sort.h  utils.h
include/libompx/internal/: sort.h
include/ompx/: csort.h  inclusive_scan.h  sort.h  sort_by_key.h  sort_types.h
lib/: CMakeLists.txt
lib/cuda/: CMakeLists.txt  csort_impl.cu  inclusive_scan_impl.cu  sort.cu  sort_impl.cu  sort_impl2.cu
lib/host/: CMakeLists.txt  sort_impl.cpp  sort_impl.cu  sort_impl2.cpp
lib/inst/: scan_inst.h  sort_by_key_inst.h  sort_inst.h
lib/oneapi/: CMakeLists.txt  sort_impl.cpp  sort_impl2.cpp
lib/rocm/: CMakeLists.txt  sort_by_key_impl.cpp  sort_impl.cpp  sort_impl2.cpp
lib/sort/: CMakeLists.txt
lib/sort/omp/: CMakeLists.txt  sort.cpp  sort.inc
lib/sort/thrust/: CMakeLists.txt
lib/sort/thrust/common/: sort.cpp  sort.inc
lib/sort/thrust/cuda/: CMakeLists.txt
lib/sort/thrust/rocm/: CMakeLists.txt
tests/: CMakeLists.txt  test_host_sort.cpp  test_host_sort_cmp.cpp  test_inclusive_scan.cpp  test_sort.cpp  test_sort_by_key.cpp  test_sort_cmp.cpp
